# ai

./: .env.example  .gitignore  Dockerfile  README.md  _README.md  azure-functions.txt  config_loader.py  create_files.py  docker-compose.yml  entrypoint.sh  format_pylint.py  handbagDelete.sh  package-lock.json  package.json  remove.sh  requirements-dev.txt  requirements.sh  requirements.txt  runExtract.sh
backend/: .env  Dockerfile  agents.py  app.py  data_collection.py  fine_tune.py  finetune.py  finetuner.py  knowledge_graph.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  confluence.py  document.py  email.py  finance.py  general.py  jira.py  learning.py  llm.py  news.py  playwright.py  recipe.py  reminders.py  social_media.py  tasks.py  websocket.py
backend/app/core/: auth.py  config.py  llm.py  scraping.py  security.py  utils.py
backend/app/db/: database.py  models.py
backend/app/security/: auth.py
backend/app/services/: confluence.py  email.py  general.py  llm_service.py  news.py  system.py  tasks.py  travel.py
backend/tests/: test_main.py
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.vue  main.ts  types.ts
frontend/src/router/: index.ts
output_files/frontend/: .eslintignore  .eslintrc.cjs  index.html  tsconfig.json  vite.config.ts
reports/: isort_report_20250131_014031.txt  pylint_raw.txt  pylint_report_20250131_014020.md
src/: main.ts
workDir/: back1.md  back2.md  back3.md  back4.md  back5.md  back6.md  back7.md  env_readme.md  pack1.md  plan1.md
(+44 files in other folders)
